corrected spacing on notifications components

--- a/styles/Notifications.module.scss
+++ b/styles/Notifications.module.scss
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: space-between;
     padding: 0.8em 1em;
-    max-width: 20em;
+    max-width: 25em;
     width: 100%;
     height: max-content;
 
@@ -14,8 +14,11 @@
         justify-content: center;
         align-items: center;
         width: 5em;
+        min-width: 5em;
         height: 5em;
+        min-height: 5em;
         padding: 1.5em;
+        margin: 0 0.8em;
         border-radius: 2em;
         position: relative;
         cursor: pointer;
